# ECommerce.Api/Startup.cs
@@ -6,22 +6,20 @@ using ECommerce.DataAccess;
 using ECommerce.Models;
 using Microsoft.AspNetCore.Builder;
 using Microsoft.AspNetCore.Hosting;
-using Microsoft.AspNetCore.HttpsPolicy;
 using Microsoft.AspNetCore.Identity;
 using Microsoft.AspNetCore.Mvc;
 using Microsoft.EntityFrameworkCore;
 using Microsoft.Extensions.Configuration;
 using Microsoft.Extensions.DependencyInjection;
 using Microsoft.Extensions.Hosting;
-using Microsoft.Extensions.Logging;
 using Serilog;
 using Microsoft.OpenApi.Models;
 using System.Reflection;
 using System.IO;
-using Microsoft.OpenApi;
-using Microsoft.OpenApi.Extensions;
-using RestSharp.Serializers;
+using ECommerce.Api.SwaggerConfigs;
+using Microsoft.Extensions.Options;
 using Swashbuckle.AspNetCore.SwaggerGen;
+using Microsoft.AspNetCore.Mvc.ApiExplorer;
 
 namespace ECommerce.Api
 {
@@ -54,24 +52,23 @@ namespace ECommerce.Api
 
             services.AddControllers();
             services.AddScoped<IDbInitializer, DbInitializer>();
-            
-            services.AddSwaggerGen(swaggerGenOptions =>
+
+            services.AddApiVersioning(options =>
             {
-                swaggerGenOptions.SwaggerDoc("v1", new OpenApiInfo { 
-                    Version = "v1", 
-                    Title = "E-Mall API", 
-                    Description = "A simple Web API build based on ASP.NET Core 3.1"
-                });
-                swaggerGenOptions.CustomOperationIds(e => e.ActionDescriptor.RouteValues["action"]);
-                swaggerGenOptions.DocumentFilter<GenerateJsonFilter>();
-                // Set the comments path for the Swagger JSON and UI.
-                var xmlFile = $"{Assembly.GetExecutingAssembly().GetName().Name}.xml";
-                var xmlPath = Path.Combine(AppContext.BaseDirectory, xmlFile);
-                swaggerGenOptions.IncludeXmlComments(xmlPath);
+                options.AssumeDefaultVersionWhenUnspecified = true;
+                options.DefaultApiVersion = new ApiVersion(1, 0);
+                options.ReportApiVersions = true;
             });
+            services.AddVersionedApiExplorer(options =>
+            {
+                options.GroupNameFormat = "'v'VVV";
+                options.SubstituteApiVersionInUrl = true;
+            });
+            services.AddSingleton<IConfigureOptions<SwaggerGenOptions>, SwaggerGenConfiguration>();
+            services.AddSwaggerGen();
         }
 
-        public void Configure(IApplicationBuilder app, IWebHostEnvironment env, IDbInitializer dbInitializer)
+        public void Configure(IApplicationBuilder app, IWebHostEnvironment env, IDbInitializer dbInitializer, IApiVersionDescriptionProvider apiVersionProvider)
         {
             if (env.IsDevelopment())
             {
@@ -84,8 +81,11 @@ namespace ECommerce.Api
 
             app.UseSwaggerUI(setupAction =>
             {
-                setupAction.SwaggerEndpoint("/swagger/v1/swagger.json", "E-Mall API v1");
+                foreach (var desc in apiVersionProvider.ApiVersionDescriptions)
+                    setupAction.SwaggerEndpoint($"/swagger/{desc.GroupName}/swagger.json", $"E-Mall API {desc.GroupName}");
+
                 setupAction.RoutePrefix = string.Empty;
+                
             });
 
             app.UseSerilogRequestLogging(); // Serilog middleware to know what requests the app is handling
@@ -98,34 +98,6 @@ namespace ECommerce.Api
             {
                 endpoints.MapControllers();
             });
-        }
-    }
-    
-    public class GenerateJsonFilter : IDocumentFilter
-    {
-        private readonly IWebHostEnvironment _environment;
-
-        public GenerateJsonFilter(IWebHostEnvironment environment)
-        {
-            _environment = environment;
-        }
-        
-        public void Apply(OpenApiDocument swaggerDoc, DocumentFilterContext context)
-        {
-            if (_environment.IsDevelopment())
-                GenerateJson(swaggerDoc);
-        }
-
-        private void GenerateJson(OpenApiDocument swaggerDoc)
-        {
-            var filePath = Path.Combine(_environment.ContentRootPath, "Swagger.json");
-            var jsonContent = swaggerDoc.SerializeAsJson(OpenApiSpecVersion.OpenApi3_0);
-
-            if (!File.Exists(filePath) ||
-                string.Compare(File.ReadAllText(filePath), jsonContent, StringComparison.OrdinalIgnoreCase) != 0)
-            {
-                File.WriteAllText(filePath, jsonContent);
-            }
         }
     }
 }
